[package]
name = "price"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.37"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
rust_decimal = { version = "1.37", features = ["macros"] }
